--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		</div>
 		<a class="tit-a" href="">Learn More</a>
 	</header>
+	<!-- sec1 -->
 	<section class="section1">
 		<h1>Let's start</h1>
 		<p class="mainP">All tools are free and easy to use!</p>
@@ -57,5 +58,13 @@
 	<section class="trans">
 		
 	</section>
+	<!-- sec2 -->
+	<!-- <section class="section2">
+		<div class="phone">
+			<img class="ph3" src="css/img/ph.png" alt="">
+			<img class="ph1" src="css/img/ph1.png" alt="">
+		</div>
+		
+	</section> -->
 </body>
 </html>
