--- a/index.html
+++ b/index.html
@@ -55,16 +55,35 @@
 			</div>
 		</div>
 	</section>
-	<section class="trans">
+	<section class="trans t1">
 		
 	</section>
 	<!-- sec2 -->
-	<!-- <section class="section2">
-		<div class="phone">
-			<img class="ph3" src="css/img/ph.png" alt="">
-			<img class="ph1" src="css/img/ph1.png" alt="">
+	<section class="section2">
+		<div class="container2">
+			<div class="sBox1 ">
+				<h1>Instruction</h1>
+				<p>This site has both a PC and a mobile version.
+				   Sections are: Programming , Design and Books. 
+				</p>   
+				<li>Programming section includes JavaScript libraries / frameworks , and some programs: Keymaker for Bandicam , KMSauto for Windows 10 and Microsoft Office. </li>
+				<li>Design section includes CSS libraries / frameworks , and programs for design. </li>
+				<li>Books section includes Armenian academic books. The books correspond to the college standards of the National Polytechnic University of Armenia.</li>
+				<br>
+				<p>
+				 The mobile version is handy when you use it for Books. 
+				  
+				</p>
+			</div>
+			<div class="sBox2">
+				<img class="phoneTemp" src="css/img/phone.png" alt="">
+			</div>
 		</div>
 		
-	</section> -->
+		
+	</section>
+	<section class="trans t2">
+		
+	</section>
 </body>
 </html>
