--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				</p>
 			</div>
 			<div class="sBox2">
-				<img class="phoneTemp" src="css/img/phone.png" alt="">
+				<img class="phoneTemp" src="css/img/Phone.png" alt="">
 			</div>
 		</div>
 		
