--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/ipad.css">
 	<link rel="stylesheet" href="css/phone.css">
-	<link rel="stylesheet" href="css/anim.css">
+
 </head>
 <body>
 	<header>
@@ -76,7 +76,7 @@
 				</p>
 			</div>
 			<div class="sBox2">
-				<img class="phoneTemp" src="css/img/Phone.png" alt="">
+				<img class="phoneTemp" src="css/img/phoneTT.png" alt="">
 			</div>
 		</div>
 		
