--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<section class="section2">
 		<div class="container2">
 			<div class="sBox1 ">
-				<h1>Instruction</h1>
+				<h1>Introduction</h1>
 				<p>This site has both a PC and a mobile version.
 				   Sections are: Programming , Design and Books. 
 				</p>   
