--- a/index.html
+++ b/index.html
@@ -2,15 +2,50 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link href="css/img/SecL2.png" rel="shortcut icon" type="image/x-icon">
+	<link rel="stylesheet" href="css/main-menu.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/ipad.css">
 	<link rel="stylesheet" href="css/phone.css">
-
+	 <!-- Awesome -->
+     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+	
 </head>
 <body>
+	 <!-- main-menu start-->
+    <nav class="main-menu">
+      <div class="nav-links">
+        <a class="menuLink activL" href="index.html">Home
+          <span class="hov-line hov-line-to-leftTop"></span>
+          <span class="hov-line hov-line-to-rightBottom"></span>
+        </a>
+        <a class="menuLink" href="prog.html">Programs
+          <span class="hov-line hov-line-to-leftTop"></span>
+          <span class="hov-line hov-line-to-rightBottom"></span>
+        </a>
+        <a class="menuLink" href="prog.html">Design
+          <span class="hov-line hov-line-to-leftTop"></span>
+          <span class="hov-line hov-line-to-rightBottom"></span>
+        </a>
+        <a class="menuLink" href="book.html">Books
+          <span class="hov-line hov-line-to-leftTop"></span>
+          <span class="hov-line hov-line-to-rightBottom"></span>
+        </a>
+        <a class="menuLink" href="about.html">About & Contact
+          <span class="hov-line hov-line-to-leftTop"></span>
+          <span class="hov-line hov-line-to-rightBottom"></span>
+        </a>
+      </div>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
+    <!-- main-menu end-->
 	<header>
 		<div class="div1">
 			<h1 class="tit">My Library</h1>
@@ -29,8 +64,8 @@
 			<div class="box">
 				<img class="box-img" src="css/img/prog4.png" alt="">
 				<div class="box-div">
-					<h3>Programming</h3>
-					<p>Here are some JS libraries, that can help you to build sites. </p>
+					<h3>Programs</h3>
+					<p>Here are some JS libraries and programs, that can help you to build sites. </p>
 					<a  href="#">Learn more</a>
 				</div>
 				
@@ -59,7 +94,7 @@
 		
 	</section>
 	<!-- sec2 -->
-	<section class="section2">
+	<section class="section2" id="introduction">
 		<div class="container2">
 			<div class="sBox1 ">
 				<h1>Introduction</h1>
@@ -85,5 +120,33 @@
 	<section class="trans t2">
 		
 	</section>
+	<!-- sec3 -->
+	<section class="section3">
+		<h1>You can find about</h1>
+		<div class="container">
+			<img class="findBox" src="css/img/html.png" alt="">
+			<img class="findBox" src="css/img/css3.png" alt="">
+			<img class="findBox" src="css/img/js.png" alt="">
+
+		</div>
+	</section>
+
+
+
+	<footer>
+        <!-- copyright -->
+        <p class="p_copy"><i class="far fa-copyright" style="margin-right:5px;"></i>&nbsp;&nbsp;<span>Ruben &nbsp;Vardanyan&nbsp; 2019-2021</span></p>
+    </footer>
+
+
+
+
+
+
+
+
+
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+	 <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
