--- a/index.html
+++ b/index.html
@@ -149,18 +149,19 @@
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
 	 <script type="text/javascript" src="js/app.js"></script>
 	 <script>
-	 	function setDocHeight() {
-			document.documentElement.style.setProperty('--vh', `${window.innerHeight/100}px`);
-			};
+	 	
 
-			window.addEventListener('resize', function () {
-			setDocHeight();
-			});
-			window.addEventListener('orientationchange', function () {
-			setDocHeight();
-			});
+			let vh = window.innerHeight * 0.01;
 
-			setDocHeight();
+			document.documentElement.style.setProperty('--vh', `${vh}px`);
+
+
+			window.addEventListener('resize', () => {
+
+			  let vh = window.innerHeight * 0.01;
+			  document.documentElement.style.setProperty('--vh', `${vh}px`);
+			});
+	
 	 </script>	
 </body>
 </html>
