--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<!-- meta -->
 	<meta property="og:title" content="My Library">
-	<meta property="og:image" content="css/img/metaImg.png">
+	<meta property="og:image" content="css/img/metaImage.png">
 	<meta property="og:description" content="Free library for programmers">
 	<!-- meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
