--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 	<meta property="og:title" content="My Library">
 	<meta property="og:image" content="css/img/metaImage.png">
 	<meta property="og:description" content="Free library for programmers">
+	<meta name="description" content="Free library for programmers. HTML CSS JS , academic books for the National Polytechnic University of Armenia">
+	<meta name="keywords" content="my library , Ruben Vardanyan , Web developer , գրքեր, պոլիտեխնիկ,html, css, js , javascript, java script, book , books, programming books , programming , armenian code , online books , library my library armenia , library my library english , Polytechnic college">
 	<!-- meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link href="css/img/SecL2.png" rel="shortcut icon" type="image/x-icon">
+	<title>My Library</title>
+	<link rel="icon" sizes="32x32" type="image/png" href="css/img/titleImg.ico">
 	<link rel="stylesheet" href="css/main-menu.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/ipad.css">
